added welcome text

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 		<title>Twins Consulting</title>
 	</head>
 	<body>
-		<p>Whatever you want.  That's the point of a website.</p>
+		<p>Welcome to our website!</p>
 	</body>
 </html>
